@@ -5,11 +5,12 @@ import Domain.Dtos.RequestDto;
 import Domain.Dtos.ResponseDto;
 import com.google.gson.reflect.TypeToken;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class PacienteService extends BaseService {
 
     public PacienteService() {
-        super(); // Usa localhost:7070 por defecto
+        super();
     }
 
     public PacienteService(String host, int port) {
@@ -17,7 +18,6 @@ public class PacienteService extends BaseService {
     }
 
     public List<PacienteDto> getAll() {
-        // IMPORTANTE: El backend espera "Pacientes" (plural)
         RequestDto req = new RequestDto("Pacientes", "getAllPacientes", null, null);
         ResponseDto res = sendRequest(req);
         if (res != null && res.isSuccess() && res.getData() != null) {
@@ -25,34 +25,57 @@ public class PacienteService extends BaseService {
                 return gson.fromJson(res.getData(), new TypeToken<List<PacienteDto>>() {}.getType());
             } catch (Exception e) {
                 System.err.println("[PacienteService] Error al parsear lista: " + e.getMessage());
+                e.printStackTrace();
             }
         }
         return List.of();
     }
 
     public PacienteDto create(int id, String nombre, String fechaNacimiento, String telefono) {
+        // Crear el DTO - el constructor ya maneja la conversión de fecha
         PacienteDto dto = new PacienteDto(id, nombre, fechaNacimiento, telefono);
+
+        // Serializar a JSON
         String json = gson.toJson(dto);
+        System.out.println("[PacienteService] Enviando JSON: " + json);
+
         RequestDto req = new RequestDto("Pacientes", "createPaciente", json, null);
         ResponseDto res = sendRequest(req);
 
-        if (res != null && res.isSuccess()) {
-            return dto; // El backend solo confirma, devolvemos el DTO original
+        if (res != null) {
+            System.out.println("[PacienteService] Respuesta del servidor: success=" + res.isSuccess() + ", message=" + res.getMessage());
+            if (res.isSuccess()) {
+                return dto;
+            } else {
+                System.err.println("[PacienteService] Error del servidor: " + res.getMessage());
+            }
+        } else {
+            System.err.println("[PacienteService] No se recibió respuesta del servidor");
         }
+
         return null;
     }
 
     public boolean delete(int id) {
-        RequestDto req = new RequestDto("Pacientes", "deletePaciente", gson.toJson(id), null);
+        System.out.println("[PacienteService] Eliminando paciente con ID: " + id);
+
+        // El backend espera el ID como String en el data
+        RequestDto req = new RequestDto("Pacientes", "deletePaciente", String.valueOf(id), null);
         ResponseDto res = sendRequest(req);
-        return res != null && res.isSuccess();
+
+        if (res != null) {
+            System.out.println("[PacienteService] Respuesta delete: success=" + res.isSuccess() + ", message=" + res.getMessage());
+            return res.isSuccess();
+        }
+
+        System.err.println("[PacienteService] No se recibió respuesta del servidor");
+        return false;
     }
 
     public List<PacienteDto> searchByName(String nombre) {
-        // El backend no tiene este endpoint aún, simulamos búsqueda local
         List<PacienteDto> todos = getAll();
         return todos.stream()
                 .filter(p -> p.getNombre().toLowerCase().contains(nombre.toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
